# phan-anh-pdp

./: ProjectHome.md
SVN/ChangedMITKpdp/: CMakeLists.txt  mainwindow.cpp  thickening_detector.cpp
SVN/ThreeDEditing/: LocalStateMachine.xml  MyTimer.cpp  QThreadEx.h  RadiusInteractor.cpp  RenderingManagerProperty.h  WheelScrollInteractor.cpp  WheelScrollInteractor.h  dataManager.cpp  dataManager.h  global.h  mitkReduceContourSetFilter.h  resources_threeDEditing.qrc  threeDEditing.cpp  timerThread.h  toolbar.cpp  toolbar.h
SVN/ThreeDEditing/Tools/: mitkSelectSurfaceWithMouseInteractor.h  mitkToolExtension.h
SVN/ThreeDEditing/Tools/ActiveContourTool/src/: QmitkActiveContourToolGUI.cpp  StartStopChanVese.h  StartStopChanVese.txx  mitkActiveContourTool.cpp
SVN/ThreeDEditing/Tools/ActiveSurfaceTool/src/: QmitkActiveSurfaceToolGUI.h
SVN/ThreeDEditing/Tools/AddThreeDTool/src/: CMakeLists.txt  mitkAddThreeDTool.h
SVN/ThreeDEditing/Tools/BulgeTool/src/: QmitkBulgeToolGUI.cpp  QmitkBulgeToolGUI.h  mitkBulgeTool.cpp  mitkBulgeTool.h  mitkBulgeTool.xpm  mousepointer.xpm
SVN/ThreeDEditing/Tools/CutTool/src/: mitkCutTool.cpp
SVN/ThreeDEditing/Tools/DragTool/src/: cursor_hand_open.xpm  mitkDragTool.h
SVN/ThreeDEditing/Tools/ExampleTool/src/: CMakeLists.txt
SVN/ThreeDEditing/Tools/ExampleToolRelease/src/: CMakeLists.txt  QmitkComplexExternalToolGUI.h  mitkComplexExternalTool.cpp  mitkPlainExternalTool.cpp  mitkPlainExternalToolFactory.h
SVN/ThreeDEditing/Tools/FillHoleTool/src/: QmitkFillHoleToolGUI.cpp  mitkFillHoleTool.cpp  mitkFillHoleTool.h
SVN/ThreeDEditing/Tools/LiveWireTool/src/: QmitkLiveWireToolGUI.h  cursor_hand_closed.xpm  mitkLiveWireTool.h  vtkVoxelizePolyData.cxx  vtkVoxelizePolyData.h
SVN/ThreeDEditing/Tools/MoveROI/src/: QmitkMoveROIToolGUI.cpp  mitkMoveROITool.cpp
SVN/ThreeDEditing/Tools/RegionGrowingTool/src/: QmitkRegionGrowingToolGUI.h  mitkRegionGrowingTool.cpp  mitkRegionGrowingTool.xpm
SVN/ThreeDEditing/Tools/RegistrationTool/src/: QmitkRegistrationToolGUI.cpp  mitkRegistrationTool.h
SVN/ThreeDEditing/Tools/SmoothTool/src/: QmitkSmoothToolGUI.cpp  QmitkSmoothToolGUI.h  mitkSmoothTool.cpp  mitkSmoothTool.xpm
SVN/ThreeDEditing/Tools/SurfaceRefinementTool/release/: QmitkSurfaceRefinementToolGUI.h.h
SVN/ThreeDEditing/Tools/mitkComplexExternalTool/src/: CMakeLists.txt  QmitkComplexExternalToolGUI.cpp
SVN/ThreeDEditing/Tools/mitkFillRegionTool/: mitkFillRegionTool.h  mitkFillRegionTool.xpm
SVN/ThreeDEditing/res/: NurFuerDieRessourcen.ui
data/: octopusLegMissing.stl
literatures/: compilation instruction.txt  mitk build errors handling.txt  new approaches.txt  notes.txt  supervisor Kobbelt and Leibe contact 3 partners before asking Rapp.txt
literatures/3d live wire/: note live wire.txt
literatures/3d live wire/delta 1.0/: delta_kernel.cu
literatures/3d live wire/gpuwire/: grid.cu
literatures/cuda/: notes.txt
literatures/snake/: Mean_curvature.htm  master thesis topic.docx  snake notes.txt
literatures/snake/Curvature_level_curveCorner_detection_files/: load_004.php  load_009.php
literatures/snake/Mean_curvature_files/: load_009.php
mitkpdp/: CMakeLists.txt  CreateDoxygenDocumentation.bat  main.cpp
mitkpdp/app/: dicom_dir.cpp  dicom_dir.h
mitkpdp/gui/: home.h  mainwindow.txx  settings.h  settings_base.cpp  settings_base.h  settings_common.cpp  settings_common.h  single_thickenings.h
mitkpdp/res/: home.ui  resources.qrc  settings_common.ui  single_load.ui  single_thickenings.ui
mitkpdp/res/res/common/: Thumbs.db
mitkpdp/res/res/home/: Thumbs.db
mitkpdp/res/res/single_thickenings/: Thumbs.db
mitkpdp/steps/inc/: Thickening.h  Thickening3d.h  contour_extractor.h  contour_extractor.txx  example_step.h  itk_otsu_threshold_image_filter.txx  itk_path_to_image_filter.h  itk_path_to_image_filter.txx  itk_slice_extractor.h  otsu_step.h  otsu_step.txx  registration.h  visualize_data.h
mitkpdp/steps/src/: Thickening.cpp  contour_filter.cpp  registration.cpp  slice_contour.cpp
trunk/SVN/ChangedMITKpdp/: mainwindow.h  single_load.h
trunk/SVN/ThreeDEditing/: MyTimer.h  RadiusInteractor.h  RenderingManagerProperty.cpp  StateMachine.xml  mitkReduceContourSetFilter.cpp  threeDEditing.cpp  threeDEditing.h  timerThread.cpp
trunk/SVN/ThreeDEditing/Tools/: mitkSelectSurfaceWithMouseInteractor.cpp  mitkToolExtension.cpp  pdpPt.cpp  pdpPt.h  pdpUtilities.cpp  pdpUtilities.h
trunk/SVN/ThreeDEditing/Tools/ActiveContourTool/src/VTKClassesForBooleanOperationsOnSurfaces/: CMakeLists.txt
trunk/SVN/VTKClassesForBooleanOperationsOnSurfaces/src/: CMakeLists.txt
trunk/literatures/: Cpp best practice.txt  new approaches.txt  notes.txt
trunk/literatures/3d live wire/: note live wire.txt
trunk/literatures/3d live wire/gpuwire/: gridclean.cu
trunk/literatures/cuda/: notes.txt
trunk/literatures/snake/: Curvature_level_curveCorner_detection.htm  snake notes.txt
trunk/literatures/snake/Curvature_level_curveCorner_detection_files/: geoiplookup
trunk/literatures/snake/Mean_curvature_files/: geoiplookup
trunk/mitkpdp/: CMakeLists.txt  Doxyfile.in  licences-info.txt
trunk/mitkpdp/app/: itk_filter_progress_watcher.cpp  itk_filter_progress_watcher.h  lung_dataset.cpp  lung_dataset.h  thickening_detection_step_base.h  thickening_detector.h
trunk/mitkpdp/gui/: home.cpp  mainwindow.cpp  progress.cpp  progress.h  settings.cpp  single_load.cpp  single_thickenings.cpp
trunk/mitkpdp/res/: mainwindow.ui  progress.ui  settings.ui
trunk/mitkpdp/steps/inc/: contour_filter.h  convex_hull.h  em_classification.h  itk_otsu_threshold_image_calculator.h  itk_otsu_threshold_image_calculator.txx  itk_otsu_threshold_image_filter.h  itk_slice_extractor.txx  itk_trace_path_on_image_filter.h  itk_trace_path_on_image_filter.txx  lungs_detection.h  lungs_detection.txx  registration.txx  slice_contour.h  slice_thickenings.h  thickening_identification.h  thickening_identification.txx  visualize_data.txx
trunk/mitkpdp/steps/src/: Thickening3d.cpp  convex_hull.cpp  em_classification.cpp  example_step.cpp  slice_thickenings.cpp
(+124 files in other folders)
